static/style.css
:root {
    --bs-body-font-family: 'Raleway', sans-serif;
  
}

.mainLogo {
    font-family: 'Caveat', cursive;
}

.page_title {
    text-align: center;
}

.colour1 {
    margin-left: 10px; 
    margin-right: 10px;
    border-bottom: 1px solid gray;
}

a:visited, a:link, a:active {
    text-decoration: none;
    color: black;
}

a:hover {
    text-decoration: none;
    color: rgb(150, 149, 149);
}


.btn-outline-success {
    --bs-btn-color: gray;
    --bs-btn-border-color: gray;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: gray;
    --bs-btn-hover-border-color: gray;
    --bs-btn-focus-shadow-rgb: 25,135,84;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: gray;
    --bs-btn-active-border-color: gray;
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: gray;
    --bs-btn-disabled-bg: transparent;
    --bs-btn-disabled-border-color: gray;
    --bs-gradient: none;
}

.logo {
    filter: contrast(30%);
    margin: 20px;
    width: 30;
    height: 30;
}

a:hover .logo {
    filter: contrast(5%);
}

.bg_green{
    background: rgb(176, 202, 252);
    color: white;
}

.bg_pink{
    background: #d6f3e1;
    color: black;
}

.bg_grey{
    background: rgb(177, 176, 176);
    color: white;
}

.center_box {
    padding: 20px;
    text-align: center;
}

.hamburger {
    border: none !important;
}

.bigcenter {
    align-items: center;
}

.welcome {
    display: flex;
}

